scrollbar issue

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  overflow: hidden;
 }
 canvas {
   position: relative;
@@ -76,6 +77,24 @@ h2 {
   h2,
   audio,
   .controls {
+    display: none;
+  }
+}
+
+@media (max-height: 865px) {
+  .screen-message {
+    display: flex;
+  }
+  canvas,
+  h2,
+  audio,
+  .controls {
+    display: none;
+  }
+}
+
+@media (min-height: 866px) {
+  .screen-message {
     display: none;
   }
 }
